TS-2549 printf() compiler warnings  on OSX (clang) with the CPP APIs